# linux-project

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: milestone1_explanation.md
include/: fs_isolator.h  process_launcher.h
src/: fs_isolator.cpp  main.cpp  process_launcher.cpp
